--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         +Kanizsai Dorottya Múzeum
         +Busóudvar
 
-        {https://www.mohacsibusojaras.hu/}
-
     </section>
-    <footer></footer>
+    <footer>
+        <p>Forrás: <a href="https://www.mohacsibusojaras.hu/">https://www.mohacsibusojaras.hu/</a> </p>
+    </footer>
 
 </body>
 </html>
