--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <p>Az így beöltözött busókat kísérik a jankelék, akiknek az a szerepe, hogy távol tartsák az utca népét, főleg a gyerekeket a busóktól. Hamuval, liszttel, ma már csak ronggyal vagy fűrészporral töltött zsákjukkal püfölik a csúfolódó gyerekhadat. A lefátyolozott arcú nőket és a lakodalmas viseletbe öltözött férfiakat, továbbá a karneváli jelmezű alakokat maskarának nevezik Mohácson.</p>
 
-        <p>Régen a tülkölő, kereplő, kolompot rázó és "bao-bao!"-t ordítozó busócsoportok tulajdonképpeni célja az volt, hogy házról-házra járva kifejezze jókívánságait, elvégezze varázslatait és részesüljön azokban az étel-ital adományokban, amiket sehol sem tagadtak meg tőlük.</p>
+        <p>Régen a tülkölő, kereplő, kolompot rázó és <q>bao-bao!</q>-t ordítozó busócsoportok tulajdonképpeni célja az volt, hogy házról-házra járva kifejezze jókívánságait, elvégezze varázslatait és részesüljön azokban az étel-ital adományokban, amiket sehol sem tagadtak meg tőlük.</p>
 
         <img src="jankele.jpg" alt="Egy jankele" title="Egy jankele" class="jobbra">
 
